--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -31,9 +31,10 @@ jobs:
           platforms: linux/amd64,linux/arm64,linux/arm/v7
 
   build-and-push-image:
-    runs-on: [ubuntu-22.04]
+    # Use a self-hosted runner to circumvent 6h timeout
+    runs-on: [self-hosted]
     needs: [build-and-push-base]
-    timeout-minutes: 720
+    timeout-minutes: 1440
     strategy:
       matrix:
         year: [2017, 2018, 2019, 2020, 2021, 2022]
@@ -56,13 +57,13 @@ jobs:
           push: true
           tags: maxkratz/texlive:${{ matrix.year }}
           platforms: linux/amd64,linux/arm64,linux/arm/v7
-        timeout-minutes: 720
+        timeout-minutes: 1440
 
   build-and-push-image-2023:
     # Use a self-hosted runner to circumvent the small storage size of GitHub-hosted runners
     runs-on: [self-hosted]
     needs: [build-and-push-base]
-    timeout-minutes: 720
+    timeout-minutes: 1440
     strategy:
       matrix:
         year: [2023]
@@ -85,14 +86,14 @@ jobs:
           push: true
           tags: maxkratz/texlive:${{ matrix.year }}
           platforms: linux/amd64,linux/arm64,linux/arm/v7
-        timeout-minutes: 720
+        timeout-minutes: 1440
 
   # latest is an extra build step because of buggy GitHub Actions if conditions
   build-and-push-latest-image:
     # Use a self-hosted runner to circumvent the small storage size of GitHub-hosted runners
     runs-on: [self-hosted]
     needs: [build-and-push-base]
-    timeout-minutes: 720
+    timeout-minutes: 1440
     strategy:
       matrix:
         year: [2024]
@@ -117,7 +118,7 @@ jobs:
             maxkratz/texlive:${{ matrix.year }}
             maxkratz/texlive:latest
           platforms: linux/amd64,linux/arm64,linux/arm/v7
-        timeout-minutes: 720
+        timeout-minutes: 1440
 
   build-and-push-image-variants:
     # Use a self-hosted runner to circumvent the small storage size of GitHub-hosted runners
@@ -148,9 +149,10 @@ jobs:
 
   # 2016 can not be built with arm64 support
   build-and-push-2016-image:
-    runs-on: [ubuntu-22.04]
+    # Use a self-hosted runner to circumvent 6h timeout
+    runs-on: [self-hosted]
     needs: [build-and-push-base]
-    timeout-minutes: 720
+    timeout-minutes: 1440
     strategy:
       matrix:
         year: [2016]
@@ -173,4 +175,4 @@ jobs:
           push: true
           tags: maxkratz/texlive:${{ matrix.year }}
           platforms: linux/amd64,linux/arm/v7
-        timeout-minutes: 720
+        timeout-minutes: 1440
