--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -94,7 +94,7 @@ jobs:
   build-and-push-image-variants:
     # Use a self-hosted runner to circumvent the small storage size of GitHub-hosted runners
     runs-on: [self-hosted]
-    needs: [build-and-push-image, build-and-push-image-2023, build-and-push-latest-image]
+    needs: [build-and-push-image, build-and-push-latest-image]
     strategy:
       matrix:
         year: [2022-gradle, 2023-gradle, 2023-python, 2024-gradle, 2024-python]
