--- a/.github/workflows/build-only.yml
+++ b/.github/workflows/build-only.yml
@@ -32,7 +32,7 @@ jobs:
     timeout-minutes: 4320
     strategy:
       matrix:
-        year: [2017, 2018, 2019, 2020, 2021, 2022, 2023]
+        year: [2017, 2018, 2019, 2020, 2021, 2022, 2023, 2024]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -52,10 +52,10 @@ jobs:
   build-image-variants:
     # Use a self-hosted runner to circumvent the small storage size of GitHub-hosted runners
     runs-on: [self-hosted]
-    needs: [build-image]
+    needs: [build-image, build-latest-image]
     strategy:
       matrix:
-        year: [2022-gradle, 2023-gradle, 2023-python, 2024-gradle, 2024-python]
+        year: [2022-gradle, 2023-gradle, 2023-python, 2024-gradle, 2024-python, 2025-gradle, 2025-python]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -79,7 +79,7 @@ jobs:
     timeout-minutes: 4320
     strategy:
       matrix:
-        year: [2024]
+        year: [2025]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
