--- a/2017/Dockerfile
+++ b/2017/Dockerfile
@@ -1,6 +1,6 @@
 # texlive base image
 FROM maxkratz/texlive:base
-LABEL maintainer="Max Kratz <account@maxkratz.com>"
+LABEL maintainer="Max Kratz <github@maxkratz.com>"
 
 # Install dependencies
 RUN apt-get update -q
