--- a/2022-gradle/Dockerfile
+++ b/2022-gradle/Dockerfile
@@ -1,6 +1,6 @@
 # texlive 2022 image
 FROM maxkratz/texlive:2022
-LABEL maintainer="Max Kratz <account@maxkratz.com>"
+LABEL maintainer="Max Kratz <github@maxkratz.com>"
 
 # Config
 ARG GRADLE_VERSION=8.14.2
