--- a/2023-python/Dockerfile
+++ b/2023-python/Dockerfile
@@ -1,6 +1,6 @@
 # texlive 2023 image
 FROM maxkratz/texlive:2023
-LABEL maintainer="Max Kratz <account@maxkratz.com>"
+LABEL maintainer="Max Kratz <github@maxkratz.com>"
 
 # Install Python 3.x
 RUN apt-get update -q && \
