--- a/2021/Dockerfile
+++ b/2021/Dockerfile
@@ -1,6 +1,6 @@
 # texlive base image
 FROM maxkratz/texlive:base
-LABEL maintainer="Max Kratz <account@maxkratz.com>"
+LABEL maintainer="Max Kratz <github@maxkratz.com>"
 
 # Install texlive
 COPY texlive.profile .
