--- a/2023-gradle/Dockerfile
+++ b/2023-gradle/Dockerfile
@@ -1,6 +1,6 @@
 # texlive 2023 image
 FROM maxkratz/texlive:2023
-LABEL maintainer="Max Kratz <account@maxkratz.com>"
+LABEL maintainer="Max Kratz <github@maxkratz.com>"
 
 # Config
 ARG GRADLE_VERSION=8.14.2
